BE - Improve auth email
